# music-bot

./: .gitignore  Dockerfile  LICENSE  README.md  bot.py  env.example  keep_alive.py  pyproject.toml  render.yaml  requirements.txt
cogs/: health.py  music.py
utils/: pixeldrain_manager.py
