[project]
name = "t-music-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryuga",email = "vaishnav2353@gmail.com"}
]
license = {text = "MIT LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py[voice] (>=2.7.1,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "aiohttp (>=3.14.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
